--- a/Topic2/Topic2/pom.xml
+++ b/Topic2/Topic2/pom.xml
@@ -21,5 +21,27 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+		<groupId>net.bytebuddy</groupId>
+		<artifactId>byte-buddy</artifactId>
+		<version>1.8.5</version>
+		<scope>compile</scope>
+	</dependency>
+	
+	<dependency>
+		<groupId>net.bytebuddy</groupId>
+		<artifactId>byte-buddy-agent</artifactId>
+		<version>1.8.5</version>
+		<scope>compile</scope>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.objenesis</groupId>
+		<artifactId>objenesis</artifactId>
+		<version>2.6</version>
+		<scope>compile</scope>
+	</dependency>
+	
   </dependencies>
 </project>
