--- a/Topic3/pom.xml
+++ b/Topic3/pom.xml
@@ -1,12 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Bootcamp</groupId>
-  <artifactId>Topic3</artifactId>
+
+  <groupId>BootCamp</groupId>
+  <artifactId>Topic2</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>Topic3</name>
+
+  <name>Topic2</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,5 +21,27 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+		<groupId>net.bytebuddy</groupId>
+		<artifactId>byte-buddy</artifactId>
+		<version>1.8.5</version>
+		<scope>compile</scope>
+	</dependency>
+	
+	<dependency>
+		<groupId>net.bytebuddy</groupId>
+		<artifactId>byte-buddy-agent</artifactId>
+		<version>1.8.5</version>
+		<scope>compile</scope>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.objenesis</groupId>
+		<artifactId>objenesis</artifactId>
+		<version>2.6</version>
+		<scope>compile</scope>
+	</dependency>
+	
   </dependencies>
 </project>
