--- a/finalProject/pom.xml
+++ b/finalProject/pom.xml
@@ -74,6 +74,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -83,4 +89,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 </project>
